// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exposes CSS Modules in the same object as customs 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: lightblue;\\\\n}\\\\n\\\\n@custom-media --narrow-window (max-width: 30em);\\\\n\\\\n@custom-selector :--title h1;\\\\n\\\\n._3KySKA6rf07sl0ilq7bBBm {\\\\n  color: var(--primary-color);\\\\n}\\\\n\\", \\"\\"]);

// exports
exports.locals = {
	\\"text\\": \\"_3KySKA6rf07sl0ilq7bBBm\\"
};

exports.locals = Object.assign({}, exports.locals, {\\"customMedia\\":{\\"--narrow-window\\":\\"(max-width: 30em)\\"},\\"customProperties\\":{\\"--primary-color\\":\\"lightblue\\"},\\"customSelectors\\":{\\":--title\\":\\"h1\\"}});"
`;

exports[`exposes CSS customs in the default export object 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: lightblue;\\\\n}\\\\n\\\\n@custom-media --narrow-window (max-width: 30em);\\\\n\\\\n@custom-selector :--title h1;\\\\n\\", \\"\\"]);

// exports

exports.locals = Object.assign({}, exports.locals, {\\"customMedia\\":{\\"--narrow-window\\":\\"(max-width: 30em)\\"},\\"customProperties\\":{\\"--primary-color\\":\\"lightblue\\"},\\"customSelectors\\":{\\":--title\\":\\"h1\\"}});"
`;

exports[`supports files with external @imports 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports
exports.i(require(\\"-!../../node_modules/css-loader/index.js!normalize.css\\"), \\"\\");

// module
exports.push([module.id, \\"\\\\n\\", \\"\\"]);

// exports

exports.locals = Object.assign({}, exports.locals, {\\"customMedia\\":{},\\"customProperties\\":{},\\"customSelectors\\":{}});"
`;
